@@ -79,6 +79,7 @@ WriteMakefile(
     		    'Coro/AIO.pm'	=> '$(INST_LIBDIR)/Coro/AIO.pm',
     		    'Coro/LWP.pm'	=> '$(INST_LIBDIR)/Coro/LWP.pm',
     		    'Coro/Util.pm'	=> '$(INST_LIBDIR)/Coro/Util.pm',
+    		    'Coro/Select.pm'	=> '$(INST_LIBDIR)/Coro/Select.pm',
                     },
 );
 
